--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 		{% block title %}
-		Actually Random
+		Sortify
 		{% endblock %}
 		{% block navbar %}
 		<div class="navbar navbar-inverse" role="navigation">
@@ -12,7 +12,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 				  </button>
-					<a class="navbar-brand" href="{{ url_for("index") }}">Actually Random</a>
+					<a class="navbar-brand" href="{{ url_for("index") }}">Sortify</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
