--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block pagename %}
-	<h1>Choose a playlist to randomize. For reals.</h1>
+	<h1>Choose a playlist to randomize</h1>
 {% endblock %}
 {% block data %}
 	<div class="row">
