--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="{{ url_for('index') }}">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
