--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1>About Sortify</h1>
-            <p>Sortify is an algorithm that is programmed using Pyhton and HTML.
+            <p>Sortify is an algorithm that is programmed using Python and HTML.
                 It helps rearrange the order of songs in a spotify playlist based on the songs audio features.
                 We use machine learning to better sort your playlists and to create a better user experience.
                 When using sortify, the user will input the playlist that they want to be sorted, and the algorithm will quickly sort it and ask the user for a new name for the playlist.
