--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -22,7 +22,7 @@
                 {{ wtf.quick_form(form) }}
             </div>
             <div class="col-md-6">
-                <img src={{ images[1].url }}></img>
+                <img src={{ images.url }}></img>
             </div>
         </div>
     </div>
