--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -40,9 +40,9 @@
         <div class="col-md-6">
             <!-- <h3 class="h3">Shuffled Playlist</h3> -->
             <form action="" class="form-inline" method="post" name="shuffle">
-                <label><h3 class="h3">Shuffled Playlist</h3></label>
+                <label><h3 class="h3">Sorted Playlist</h3></label>
                 <button type="submit" class="btn btn-primary" name="Shuffle"
-                        value="Shuffle Again">Shuffle Again
+                        value="Shuffle Again">Sort Again
                 </button>
             </form>
             <ol>
