fixed bootstrap navbar

--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -2,20 +2,26 @@
 {% block pagename %}
 {% endblock %}
 {% block data %}
-    <h1>Choose a playlist to sort</h1>
-	<div class="row">
-	{% for item in playlists %}
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail">
-				{% if item.images %}
-				<img src="{{ item.images[0].url }}" alt="Playlist Art">
-				{% endif %}
-				<div class="caption">
-					<h4>{{ item.name }}</h4>
-					<p><a href="../playlist/{{ item.id }}" class="btn btn-primary" role="button">Sort!</a></p>
-				</div>
-			</div>
-		</div>
-	{% endfor %}
-	</div>
+    <div class="container">
+        <div class="well">
+            <h3>Choose a playlist to sort</h3>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            {% for item in playlists %}
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        {% if item.images %}
+                            <img src="{{ item.images[0].url }}" alt="Playlist Art">
+                        {% endif %}
+                        <div class="caption">
+                            <h4>{{ item.name }}</h4>
+                            <p><a href="../playlist/{{ item.id }}" class="btn btn-primary" role="button">Sort!</a></p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
